added registration mapping

--- a/src/main/webapp/resources/DonationForm.html
+++ b/src/main/webapp/resources/DonationForm.html
@@ -19,7 +19,7 @@ function validateForm() {
 
 	<h1>Submit Donation Here</h1>
 	<form name="DonationForm" action="../submittedDonation" method="post">
-		Company Name: <input type="text" name="nameOfCompany"> <br>
+		Company Name: <input type="text" name="companyName"> <br>
 		Company Address: <input type="text" name="address">
 		<!--  <br>Publisher: <input type ="text" name = "publisher"> -->
 		<!-- <br>Sales: <input type ="text" name = "sales"> -->
