--- a/src/main/webapp/resources/DonationForm.html
+++ b/src/main/webapp/resources/DonationForm.html
@@ -17,13 +17,16 @@ function validateForm() {
  onsubmit="return validateForm()" 
 </script> -->
 
-	<h1>Submit Donation Here</h1>
+ 	<h1>Submit Donation Here</h1>
 	<form name="DonationForm" action="../submittedDonation" method="post">
-		Company Name: <input type="text" name="companyName"> <br>
-		Company Address: <input type="text" name="address">
-		<!--  <br>Publisher: <input type ="text" name = "publisher"> -->
-		<!-- <br>Sales: <input type ="text" name = "sales"> -->
-		<input type="submit" value="Submit">
-	</form>
+		Product Description: <input type="text" name="productDescription"> <br>
+		Number of days before food expires: <input type="text" name="expirationDate"> <br>
+		Is food packaged:<br> <input type="radio" name="choice" value="yes"> Yes<br>
+ 						 <input type="radio" name="Choice" value="No"> No<br>
+		Is food greater than 200lbs:<br><input type="radio" name="choice" value="yes"> Yes<br>
+									 <input type="radio" name="Choice" value="No"> No<br>
+		<input type="submit" value="Submit"> 
+	</form> 
+	
 </body>
 </html>
