--- a/src/main/webapp/resources/DonationForm.html
+++ b/src/main/webapp/resources/DonationForm.html
@@ -21,10 +21,14 @@ function validateForm() {
 	<form name="DonationForm" action="../submittedDonation" method="post">
 		Product Description: <input type="text" name="productDescription"> <br>
 		Number of days before food expires: <input type="text" name="expirationDate"> <br>
+		</form>
+		<form>
 		Is food packaged:<br> <input type="radio" name="choice" value="yes"> Yes<br>
- 						 <input type="radio" name="Choice" value="No"> No<br>
+ 						 <input type="radio" name="choice" value="No"> No<br>
+ 						 </form>
+		<form>
 		Is food greater than 200lbs:<br><input type="radio" name="choice" value="yes"> Yes<br>
-									 <input type="radio" name="Choice" value="No"> No<br>
+									 <input type="radio" name="choice" value="No"> No<br>
 		<input type="submit" value="Submit"> 
 	</form> 
 	
