linked things together and cleaned them up

--- a/src/main/webapp/resources/DonationForm.html
+++ b/src/main/webapp/resources/DonationForm.html
@@ -18,17 +18,13 @@ function validateForm() {
 </script> -->
 
  	<h1>Submit Donation Here</h1>
-	<form name="DonationForm" action="../submittedDonation" method="post">
+	<form name="DonationForm" action="../submittedDonation" method="POST">
 		Product Description: <input type="text" name="productDescription"> <br>
 		Number of days before food expires: <input type="text" name="expirationDate"> <br>
-		</form>
-		<form>
-		Is food packaged:<br> <input type="radio" name="choice" value="yes"> Yes<br>
- 						 <input type="radio" name="choice" value="No"> No<br>
- 						 </form>
-		<form>
-		Is food greater than 200lbs:<br><input type="radio" name="choice" value="yes"> Yes<br>
-									 <input type="radio" name="choice" value="No"> No<br>
+		Is food packaged:<br> <input type="radio" name="package" value="yes"> Yes<br>
+ 						 	  <input type="radio" name="packe" value="No"> No<br>
+		Is food greater than 200lbs:<br><input type="radio" name="weight" value="yes"> Yes<br>
+									 <input type="radio" name="weight" value="No"> No<br>
 		<input type="submit" value="Submit"> 
 	</form> 
 	
