--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -13,7 +13,7 @@
 			Company Name:<input type="text" name="companyName"> <br>
 			Company Address:<input type="text" name="address"> <br>
 			Main Contact:<input type="text" name="contact"><br>
-			Phone Number:<input type="text" id="myNumber" placeholder="xxx-xxx-xxxx"><br>
+			Phone Number:<input type="text" id="phoneNumber" placeholder="xxx-xxx-xxxx"><br>
 			Email:<input type="text" name="email"> <br> 
 			Twitter Name:<input type="text" id="myText" placeholder="@twittername"><br> 
 			User Name:<input type="text" name="username"><br> 
@@ -83,7 +83,7 @@
 			}
 			
 			function myFunction() {
-			    var y = document.getElementById("myNumber").placeholder;
+			    var y = document.getElementById("phoneNumber").placeholder;
 			    document.getElementById("xxx-xxx-xxxx").innerHTML = y;
 			}
 			
