fix bug to submit phone number and twitter name

--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -13,9 +13,9 @@
 			Company Name:<input type="text" name="companyName"> <br>
 			Company Address:<input type="text" name="address"> <br>
 			Main Contact:<input type="text" name="contact"><br>
-			Phone Number:<input type="text" id="phoneNumber" placeholder="xxx-xxx-xxxx"><br>
+			Phone Number:<input type="text" name="phoneNumber" placeholder="xxx-xxx-xxxx"><br>
 			Email:<input type="text" name="email"> <br> 
-			Twitter Name:<input type="text" id="myText" placeholder="@twittername"><br> 
+			Twitter Name @:<input type="text" name="myText" placeholder="twittername"><br> 
 			User Name:<input type="text" name="username"><br> 
 			Password:<input type="text" name="password"><br> <input type="submit"
 				value="Submit">
