added check to see if user already exists

--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -17,7 +17,7 @@
 			Email:<input type="text" name="email"> <br> 
 			Twitter Name @:<input type="text" name="myText" placeholder="twittername"><br> 
 			User Name:<input type="text" name="username"><br> 
-			Password:<input type="text" name="password"><br> <input type="submit"
+			Password:<input type="password" name="password"><br> <input type="submit"
 				value="Submit">
 		</form>
 		
