--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -4,6 +4,10 @@
 <meta charset="ISO-8859-1">
 <title>Registration</title>
 </head>
+<link rel="stylesheet" href="css/bootstrap.css">
+
+<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+
 <body>
 
 	<h1>Create Found Harvest User Account</h1>
@@ -22,7 +26,7 @@
 		</form>
 		
 
-		<script>
+		<script src="js/bootstrap.min.js">
 			function validateForm() {
 			
 				var cn = document.forms["RegistrationForm"]["companyName"].value;
