--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -13,7 +13,7 @@
 	<h1>Create Found Harvest User Account</h1>
 
 	<div>
-		<form name="RegistrationForm" action="../submittedRegistration" onsubmit="return validateForm()" method="post">
+		<form name="RegistrationForm" class="form-horizontal" action="../submittedRegistration" onsubmit="return validateForm()" method="post">
 			Company Name:<input type="text" name="companyName"> <br>
 			Company Address:<input type="text" name="address"> <br>
 			Main Contact:<input type="text" name="contact"><br>
