--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
 <body>
-
+	
+	
 	<h1>Create Found Harvest User Account</h1>
 
 	<div>
@@ -26,7 +27,7 @@
 		</form>
 		
 
-		<script src="js/bootstrap.min.js">
+		<script>
 			function validateForm() {
 			
 				var cn = document.forms["RegistrationForm"]["companyName"].value;
@@ -71,6 +72,7 @@
 					alert("Invalid email");
 					return false;
 				}
+				
 			}
 			function validateEmail(x) {
 				var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
@@ -91,8 +93,10 @@
 			    document.getElementById("xxx-xxx-xxxx").innerHTML = y;
 			}
 			
-		</script>
+		
+	
+	</script>
+	<script src="js/bootstrap.min.js"> </script>
 	</div>
-
 </body>
 </html>
