--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -11,13 +11,16 @@
 <body>
 	
 	<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Found Harvest</a>
-    </div>
-    
-  </div>
-</nav>
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Found Harvest</a>
+		</div>
+		<ul class="nav navbar-nav navbar-right">
+
+			<li><a href="/treasure/">Log in</a></li>
+		</ul>
+	</div>
+	</nav>
 	
 	<h1>Create Found Harvest User Account</h1>
 
