--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -24,7 +24,7 @@
 	<div>
 		<form name="RegistrationForm" class="form-horizontal" action="../submittedRegistration" onsubmit="return validateForm()" method="post">
 		<fieldset>
-		<legend>Registration</legend>
+		<legend></legend>
 		
 			
 			 <div class="form-group">
