changed placeholder values

--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -33,38 +33,38 @@
 			 <div class="form-group">
       <label for="inputcompanyname" class="col-lg-2 control-label">Company Name</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="companyName" placeholder="Company Name">
+        <input type="text" class="form-control" name="companyName" placeholder="Tom's Grocery">
       </div>
 		</div>	
 			<div class="form-group">
       <label for="inputCompanyAddress" class="col-lg-2 control-label">Company Address</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="address" placeholder="Commpany Address">
+        <input type="text" class="form-control" name="address" placeholder="123 Main Street">
       </div>
     </div>
     	<div class="form-group">
       <label for="inputMainContact" class="col-lg-2 control-label">Main Contact</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="contact" placeholder="Main Contact">
+        <input type="text" class="form-control" name="contact" placeholder="Tom Smith">
       </div>
     </div>
     <div class="form-group">
       <label for="inputPhoneNumber" class="col-lg-2 control-label">Phone Number</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="phoneNumber" placeholder="Phone Number">
+        <input type="text" class="form-control" name="phoneNumber" placeholder="313-999-9999">
       </div>
     </div>
      
     <div class="form-group">
       <label for="inputTwitterName" class="col-lg-2 control-label">Twitter Name @</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="myText" placeholder="twittername">
+        <input type="text" class="form-control" name="myText" placeholder="TomsGrocer">
       </div>
     </div>
      <div class="form-group">
       <label for="inputUserName" class="col-lg-2 control-label">User Name</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="username" placeholder="Username">
+        <input type="text" class="form-control" name="username" placeholder="TomG">
       </div>
     </div>
       <div class="form-group">
