--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Registration</title>
-</head>
 <link rel="stylesheet" href="css/bootstrap.css">
-
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</head>
 
 <body>
 	
@@ -52,6 +53,12 @@
       <label for="inputPhoneNumber" class="col-lg-2 control-label">Phone Number</label>
       <div class="col-lg-4">
         <input type="text" class="form-control" name="phoneNumber" placeholder="Phone Number">
+      </div>
+    </div>
+     <div class="form-group">
+      <label for="inputPhoneNumber" class="col-lg-2 control-label">Email</label>
+      <div class="col-lg-4">
+        <input type="text" class="form-control" name="email" placeholder="email">
       </div>
     </div>
      
@@ -152,6 +159,7 @@
 		
 	
 	</script>
+	
 	<script src="js/bootstrap.min.js"> </script>
 	</div>
 </body>
