cleaned up placeholders in forms

--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -34,50 +34,50 @@
 			 <div class="form-group">
       <label for="inputcompanyname" class="col-lg-2 control-label">Company Name</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="companyName" placeholder="Tom's Grocery">
+        <input type="text" class="form-control" name="companyName" placeholder="e.g. Tom's Grocery">
       </div>
 		</div>	
 			<div class="form-group">
       <label for="inputCompanyAddress" class="col-lg-2 control-label">Company Address</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="address" placeholder="123 Main Street">
+        <input type="text" class="form-control" name="address" placeholder="e.g. 123 Main Street">
       </div>
     </div>
     	<div class="form-group">
       <label for="inputMainContact" class="col-lg-2 control-label">Main Contact</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="contact" placeholder="Tom Smith">
+        <input type="text" class="form-control" name="contact" placeholder="e.g. Tom Smith">
       </div>
     </div>
     <div class="form-group">
       <label for="inputPhoneNumber" class="col-lg-2 control-label">Phone Number</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="phoneNumber" placeholder="313-999-9999">
+        <input type="text" class="form-control" name="phoneNumber" placeholder="e.g. 313-999-9999">
       </div>
     </div>
      <div class="form-group">
       <label for="inputPhoneNumber" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="email" placeholder="email">
+        <input type="text" class="form-control" name="email" placeholder="e.g. Tom@GroceryStore.com">
       </div>
     </div>
      
     <div class="form-group">
       <label for="inputTwitterName" class="col-lg-2 control-label">Twitter Name @</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="myText" placeholder="TomsGrocer">
+        <input type="text" class="form-control" name="myText" placeholder="e.g. TomsGrocer">
       </div>
     </div>
      <div class="form-group">
       <label for="inputUserName" class="col-lg-2 control-label">User Name</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="username" placeholder="TomG">
+        <input type="text" class="form-control" name="username" placeholder="e.g. TomG">
       </div>
     </div>
       <div class="form-group">
       <label for="inputPassword" class="col-lg-2 control-label">Password</label>
       <div class="col-lg-4">
-        <input type="text" class="form-control" name="password" placeholder="Password">
+        <input type="text" class="form-control" name="password" placeholder="e.g. Password">
       </div>
     </div>
     <div class="form-group">
