--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -7,6 +7,13 @@
 <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<style>
+.grey-color {
+background-color:#f5f5f5;
+}
+
+
+</style>
 </head>
 
 <body>
@@ -24,7 +31,7 @@
 	</nav>
 	
 	<h1>Create Found Harvest User Account</h1>
-
+<div class="container grey-color">
 	<div>
 		<form name="RegistrationForm" class="form-horizontal" action="../submittedRegistration" onsubmit="return validateForm()" method="post">
 		<fieldset>
@@ -87,7 +94,9 @@
 			 </div>
 				
 				</fieldset>
+				
 		</form>
+		</div>
 		
 
 		<script>
