added Req description to registration and donation

--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -11,13 +11,9 @@
 .grey-color {
 background-color:#f5f5f5;
 }
-
-
 </style>
 </head>
-
 <body>
-	
 	<nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
@@ -33,11 +29,17 @@ background-color:#f5f5f5;
 	<h1>Create Found Harvest User Account</h1>
 <div class="container grey-color">
 	<div>
+		<h2></h2>
+		
 		<form name="RegistrationForm" class="form-horizontal" action="../submittedRegistration" onsubmit="return validateForm()" method="post">
+		Donation Requirements: <br>
+			<ul>
+		<li>Donation pick-up routes currently only service <strong>Oakland, McComb and Wayne counties </strong></li>
+		<li>Donation pick-up package size needs to<strong>weight 200lbs or more</strong>. </li>
+		<li>If your donation is outside these counties and weight requirements please contact us directly</li>
+			</ul>
 		<fieldset>
 		<legend></legend>
-		
-			
 			 <div class="form-group">
       <label for="inputcompanyname" class="col-lg-2 control-label">Company Name</label>
       <div class="col-lg-4">
