--- a/src/main/webapp/resources/registration.html
+++ b/src/main/webapp/resources/registration.html
@@ -52,7 +52,7 @@
 							Name</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="companyName"
-								placeholder="e.g. Tom's Grocery">
+								placeholder="e.g. Tom's Grocery (required)">
 						</div>
 					</div>
 					<div class="form-group">
@@ -60,7 +60,7 @@
 							Address</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="address"
-								placeholder="e.g. 123 Main Street">
+								placeholder="e.g. 123 Main Street (required)">
 						</div>
 					</div>
 					<div class="form-group">
@@ -68,7 +68,7 @@
 							Contact</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="contact"
-								placeholder="e.g. Tom Smith">
+								placeholder="e.g. Tom Smith (required)">
 						</div>
 					</div>
 					<div class="form-group">
@@ -76,14 +76,14 @@
 							Number</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="phoneNumber"
-								placeholder="e.g. 313-999-9999">
+								placeholder="e.g. 313-999-9999 (required)">
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputPhoneNumber" class="col-lg-2 control-label">Email</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="email"
-								placeholder="e.g. Tom@GroceryStore.com">
+								placeholder="e.g. Tom@GroceryStore.com (required)">
 						</div>
 					</div>
 
@@ -92,7 +92,7 @@
 							Name @</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="myText"
-								placeholder="e.g. TomsGrocer">
+								placeholder="e.g. TomsGrocer@Twitter (optional)">
 						</div>
 					</div>
 					<div class="form-group">
@@ -100,14 +100,14 @@
 							Name</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="username"
-								placeholder="e.g. TomG">
+								placeholder="e.g. TomG (required)">
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="inputPassword" class="col-lg-2 control-label">Password</label>
 						<div class="col-lg-4">
 							<input type="text" class="form-control" name="password"
-								placeholder="e.g. Password">
+								placeholder="e.g. Password (required)">
 						</div>
 					</div>
 					<div class="form-group">
